tools/kql-validator/tests/bad/trailing_pipe.kql
// TRR0099.WIN.A -- Bad: Trailing pipe
// DDM Operation: n3 "Test"

DeviceProcessEvents
| where Timestamp > ago(24h)
|
